# 9cc

./: .depend  .gitignore  .gitignore~  .travis.yml  1.txt  7cc.c  7cc.h  9cc.c  CMakeLists.txt  Makefile  README  README.md  SYNTAX  SYNTAX.md  TODO  TODO.md  TODO.org  alloc.c  ast.c  ast.h  block.c  builtin.c  cc.c  cc.h  config.h  cpp.c  cpp.h  debug.c  debug.h  decl.c  diagmsg.txt  error.c  error.h  eval.c  events.h  expr.c  gen-decl.c  gen.c  gen.h  hideset.c  (+47 more)
7burg/: 7burg.c  7burg.h  Makefile  burg.c  burg.h  grammar.c  grammar.y
Documentation/: BUGS  TODO  abi.txt  assembly.txt  expr.txt  ir.txt  stmt.txt
amd64/: Makefile  x86_64-linux.7
burg/: burg.c  grammar.c  grammar.y
doc/: 7cc.1  9cc.1  cpp.txt  ir.txt
docs/: TODO  abi.txt  assembly.txt  function.txt  gen.txt  ir.txt
include/: 9cc.h  builtin.h  float.h  iso646.h  limits.h  mcc.h  stdarg.h  stdbool.h  stddef.h  stdint.h
libcpp/: Makefile  cpp.c  cpp.h  error.c  error.h  expr.c  hideset.c  idtab.c  imap.c  imap.h  input.c  internal.h  lex.c  lex.h  libcpp.h  strtab.c  sys.c  token.def
libmissing/: strdup.c  strndup.c
libutils/: Makefile  alloc.c  color.h  compat.h  file.c  libutils.h  list.c  list.h  map.c  map.h  set.c  set.h  strbuf.c  strbuf.h  string.c  sys.c  sys.h  utils.h  vector.c  vector.h  wrapper.c
mcc.xcodeproj/: project.pbxproj
mcc.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
proj/mcc/mcc.xcodeproj/: project.pbxproj
scripts/: lex.py
src/: Makefile  README.md  alloc.c  alloc.h  ast.c  ast.h  cc.c  cc.h  config.h  cpp.c  debug.c  decl.c  error.c  etc.h  expr.c  lex.c  lex.h  lib.h  map.c  mcc.c  mcc.h  misc.c  node.c  node.def  node.h  print.c  stmt.c  str.c  str.h  string.c  sym.c  sym.h  token.def  token.h  type.c  type.h  util.c  vector.c
src/cc/: Makefile  alloc.c  ast.c  ast.h  c.c  c.h  cc.c  cc.h  config.h  debug.c  decl.c  error.c  error.h  expr.c  gen.c  lex.c  lex.h  lib.h  node.c  node.h  nodename.h  print.c  stmt.c  string.c  sym.c  sym.h  token.h  type.c  type.h  vector.c
src/cc/lib/: Makefile  alloc.c  lib.h  print.c  string.c  vector.c
src/cpp/: Makefile  README.md  cpp.c  cpp.h  linux.c  mac.c  posix.c  vector.c
src/driver/: Makefile  README.md  linux.c  mac.c  mcc.c  mcc.h  vector.c
src/etc/: Makefile  cpp.c  linux.c  mac.c  mcc.c  mcc.h  osx.c  vector.c
src/etc/darwin/: sys.c
src/etc/darwin/include/: float.h
src/etc/linux/: sys.c
src/etc/linux/include/: float.h
src/include/: stdarg.h
src/lib/: Makefile  lib.h  print.c  string.c
src/main/c/: NOTES  README.md
src/main/c/mcc/: cc.c  decl.c  node.c  type.c
src/main/c/mcc.vsproj/mcc/: mcc.opensdf  mcc.sdf  mcc.sln  mcc.vcxproj  mcc.vcxproj.filters
src/main/c/mcc.xcodeproj/: project.pbxproj
src/main/c/mcc.xcodeproj/project.xcworkspace/xcshareddata/: mcc.xccheckout
src/main/c/mcc.xcodeproj/project.xcworkspace/xcuserdata/mario.xcuserdatad/: UserInterfaceState.xcuserstate
src/main/c/mcc/lex/: lex.h
src/main/c/mcc/lib/: alloc.c
src/main/java/: run.sh
src/main/java/org/hackii/c/: Compiler.java  README.md
src/mcc/: Makefile  c.h  config.h  expr.c  linux.c  mac.c  mcc.c  mcc.h  posix.c  stmt.c  sym.c  test.c  vector.c
src/mcc.xcodeproj/: project.pbxproj
src/mcc/lex/: lex.c  token.h
src/mcc/lib/: lib.h  object.c  object.h  string.c  string.h
src/sys/: mcc.c  sys.h
src/sys/linux/: sys.c
src/sys/linux/include/: stdarg.h
src/test/: README.md
src/utils/: alloc.c  array.c  macros.h  map.c  misc.c  string.c  utils.h  vector.c
sys/: darwin.c  darwin.h  linux.c  linux.h  mcc.c  ntenv.c  sys.h  unix.c  winnt.c
test/: 1.c  2.c  3.c  CMakeLists.txt  ast.c  ast.h  buble_sort.c  char.c  decl.c  expr.c  float.c  freg.c  fsync.py  in"c.c  inc.h.gch  inc.s  int.c  internal.h  lex.py  line_comment.c  main.c  qsort.c  stmt.c  str.c  test.c  test.h  test_array.c  test_bug.sh  test_cc.sh  test_cpp.sh  test_ir.sh  test_profile.sh  test_set.c  test_vector.c  wstr.c
test/ast/: ast.c  ast.h  ast.py  ast.rb  expr.c  expr.xml
test/cpp/: cpp.c  funclike.c  objlike.c  stringize.c
test/internal/: alignty.c  internal.c  internal.h  map.c  string.c  sym.c  type.c  type2s.c  typesize.c
test/scripts/: cpp.py
tools/: README.md  diag.py  fsync.py
utils/: alloc.c  color.h  dict.c  dict.h  hideset.c  hideset.h  list.c  list.h  map.c  map.h  set.c  set.h  strbuf.c  strbuf.h  string.c  sys.c  sys.h  utils.h  vector.c  vector.h  wrapper.c
(+2 files in other folders)
